[package]
name = "thuntendo"
version = "0.1.0"
authors = ["Reilly, Don <dreilly1982@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.14.0"
rand = "0.8.5"
winit = "0.28"
winit_input_helper = "0.14"
bitflags = "2.6.0"
crossterm = "0.25.0"
cpal = "0.15.3"
ringbuf = "0.3.0"
rustfft = "6.2.0"
spin_sleep = "1.3.0"